backend/deployments/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["mku/kubestatus"]'
  name: kubestatus
  namespace: kubestatus
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: monitor
      port: 8080
      protocol: TCP
      targetPort: 8081
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-mku-kubestatus
  sessionAffinity: None
  type: ClusterIP
