backend/deployments/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubestatus
  namespace: kubestatus
spec:
  ingressClassName: nginx
  rules:
    - host: kubestatus.apps-sandbox.intra.swm.de
      http:
        paths:
          - backend:
              service:
                name: kubestatus
                port:
                  number: 8080
            path: /
            pathType: Prefix
